# website

./: .gitignore  Cargo.toml  README.md  body.html  index.html  index.ts  input.css  leptosfmt.toml  package-lock.json  package.json  tailwind.css
public/: index.html  manifest.json
src/: App.js  Blog.js  Content.js  Flex.js  GlobalTheme.js  Info.js  Junk.js  LeftPanel.js  MenuItem.js  MobileApp.js  ThemeDefs.js  ThemeToggle.js  Themes.js  WebApp.js  Work.js  app.rs  codeblock.rs  content.rs  counters.rs  failed_hoc_attempt.rs  fancy.rs  fancy_codeblock.rs  fancy_ui.rs  hooks.js  index.css  index.js  lib.rs  main.rs  springs.js  ui.rs  ux.rs
src/blog/: Post.js
src/codeblocks/: code.hhlt  code.html  code.rs  tailwind_line_noise.css  tailwind_line_noise.hhlt  tailwind_problem.css  tailwind_problem.hhlt  tailwind_result.css  tailwind_result.hhlt  tailwind_solution.css  tailwind_solution.hhlt  test.hhlt  test.html  test.rs
src/mob/: Blog.js  BlogPost.js  Info.js  Layout.js  ModeToggle.js  NavBar.js
src/web/: Blog.js  BlogPost.js  Info.js  Junk.js  Layout.js  LeftPanel.js  ModeToggle.js  Work.js
