[package]
name = "fwlr-io"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["nightly", "csr"] }
leptos-mview = "0.4.4"
leptos-use = "0.18.0"
tailwind_fuse = "0.3.2"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.22"
tracing-subscriber-wasm = "0.1.0"
